--- a/src/app/pages/success-page/success-page.component.css
+++ b/src/app/pages/success-page/success-page.component.css
@@ -3,14 +3,14 @@
     flex-direction: column;
     justify-content: center; 
     align-items: center; 
-    height: 80vh; 
+    height: auto; 
     border: 2px solid #ccc; 
     padding: 20px; 
     box-sizing: border-box; 
-    max-width: 50%;
+    max-width: 40%; 
     margin: 0 auto;
     border-radius: 20px;
-    box-shadow: 10px 15px 20px rgba(0, 0, 0, 0.5); 
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5); 
 }
   
 .success-answer {
@@ -39,13 +39,12 @@
     padding: 14px 28px;
     cursor: pointer;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    animation: button-shimmer 2s infinite;
     transition: all 0.3s ease-in-out;
+    margin-top: 20px;
 }
   
 .beautiful-button:hover {
     background: linear-gradient(to bottom, #2c2f63, #5b67b7);
-    animation: button-particles 1s ease-in-out infinite;
     transform: translateY(-2px);
 }
   
@@ -54,7 +53,7 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
 }
   
-  @keyframes button-shimmer {
+@keyframes button-shimmer {
     0% {
       background-position: left top;
     }
@@ -62,10 +61,9 @@
     100% {
       background-position: right bottom;
     }
-  }
+}
   
- 
-  @keyframes button-particles {
+@keyframes button-particles {
     0% {
       background-position: left top;
     }
@@ -73,4 +71,4 @@
     100% {
       background-position: right bottom;
     }
-  }
+}
