--- a/src/app/pages/list-task/list-task.component.css
+++ b/src/app/pages/list-task/list-task.component.css
@@ -89,17 +89,14 @@ h2 {
 }
 
 .quiz-flex {
+  background: aliceblue;
   display: flex;
   align-items: flex-start;
-  border-bottom: 1px solid #ccc;
-}
-
-.even-question {
-  background-color: #f2f2f2;
-}
-
-.odd-question {
-  background-color: #e6e6e6;
+  /* border: 1px solid #ccc; */
+  border-radius: 10px;
+    margin: 10px;
+    justify-content: center;
+    align-items: center;
 }
 
 .question-column {
@@ -122,6 +119,13 @@ h2 {
   margin-bottom: 10px;
 }
 
+.hidden-answer {
+  visibility: hidden;
+}
+/* .correct-answer {
+  visibility: visible;
+} */
+  
 .beautiful-button {
   display: block;
   width: 100%;
