--- a/src/app/pages/list-task/list-task.component.html
+++ b/src/app/pages/list-task/list-task.component.html
@@ -8,51 +8,54 @@
           <span>Thời gian còn lại:</span>
           <p>{{ minutes }} phút {{ seconds }} giây</p>
         </div>
-      </div>      
-    </div>   
+      </div>
+    </div>
   </div>
   <div class="quiz-question" *ngFor="let question of questions; let i = index">
     <ng-container *ngIf="i === 0">
-        <h5>Câu hỏi {{ i + 1 }} trong tổng số {{ questions.length }}</h5>
-        <div class="header-row">
-            <div class="header-left">
-                <h2 class="question-title">Tích vào ô bên phải bạn cho là đúng, không đúng không tích</h2>
-            </div>
-            <div class="header-right">
-                <h2 class="correct-answer-title">Đúng</h2>
-                <div class="answer-options">
-                    <div class="option">A</div>
-                    <div class="option">B</div>
-                    <div class="option">C</div>
-                </div>
-            </div>
+      <h5>Câu hỏi {{ i + 1 }} trong tổng số {{ questions.length }}</h5>
+      <div class="header-row">
+        <div class="header-left">
+          <h2 class="question-title">Tích vào ô bên phải bạn cho là đúng, không đúng không tích</h2>
         </div>
+        <div class="header-right">
+          <h2 class="correct-answer-title">Đúng</h2>
+          <div class="answer-options">
+            <div class="option">A</div>
+            <div class="option">B</div>
+            <div class="option">C</div>
+          </div>
+        </div>
+      </div>
     </ng-container>
-    <div class="quiz-flex" [ngClass]="{'even-question': i % 2 === 0, 'odd-question': i % 2 !== 0}">
-        <div class="question-column">
-            <div class="question-wrapper">
-                <div>{{ question.content }}</div>
-            </div>
+    <div class="quiz-flex">
+      <div class="question-column">
+        <div class="question-wrapper">
+          <div style="margin-left:14px; font-style: italic;">{{ question.content }}</div>
         </div>
-        <div class="answers-column">
-            <div class="answers-wrapper">
-                <div>
-                    <ul class="style-list">
-                        <li *ngFor="let answer of question.answers">
-                            <label>
-                                <input 
-                                    type="checkbox" 
-                                    [name]="question.id" 
-                                    [value]="answer.id" 
-                                    [disabled]="answer.id !== question.correctAnswer" 
-                                    (change)="selectAnswer(question, answer)">
-                            </label>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+      </div>
+      <div class="answers-column">
+        <div class="answers-wrapper">
+          <div>
+            <ul class="style-list">
+              <ng-container *ngFor="let answer of question.answers">
+                <li [class.correct-answer]="answer.id === question.correctAnswer"
+                    [class.hidden-answer]="answer.id !== question.correctAnswer">
+                  <label>
+                    <input 
+                      type="radio" 
+                      [name]="question.id" 
+                      [value]="answer.id" 
+                      (change)="selectAnswer(question, answer)">
+                    {{ answer.content }}
+                  </label>
+                </li>
+              </ng-container>
+            </ul>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-<button (click)="submitAnswers()" class="beautiful-button">Submit</button>  
+  </div>
+  <button (click)="submitAnswers()" class="beautiful-button">Submit</button>
 </div>
