--- a/src/app/pages/list-task/list-task.component.html
+++ b/src/app/pages/list-task/list-task.component.html
@@ -8,19 +8,19 @@
           <h2 class="question-title">Tích vào ô bên phải bạn cho là đúng, không đúng không tích</h2>
         </div>
         <div class="header-right">
-          <h2 class="correct-answer-title">Đúng</h2>
+          <!-- <h2 class="correct-answer-title">Đúng</h2>
           <div class="answer-options">
             <div class="option">A</div>
             <div class="option">B</div>
             <div class="option">C</div>
-          </div>
+          </div> -->
         </div>
       </div>
     </ng-container>
     <div class="quiz-flex">
       <div class="question-column">
         <div class="question-wrapper">
-          <div style="margin-left:14px; font-style: italic;">{{ question.content }}</div>
+          <div style="margin-left:14px;">{{ question.content }}</div>
         </div>
       </div>
       <div class="answers-column">
