--- a/src/app/pages/success-page/success-page.component.html
+++ b/src/app/pages/success-page/success-page.component.html
@@ -1,13 +1,11 @@
-
-<div class="success-container">
-    <h2>Kết quả của bài kiểm tra</h2>
-  <div class="success-answer">
+<div class="result-container">
+  <h2>Kết quả của bài kiểm tra</h2>
+  <div class="result-answers">
     <ul>
       <li>Số lượng đáp án A: {{ countA }}</li>
       <li>Số lượng đáp án B: {{ countB }}</li>
       <li>Số lượng đáp án C: {{ countC }}</li>
-     
     </ul>
   </div>
-  <button class="beautiful-button" routerLink="/">Quay lại màn hình chính</button>
+  <button class="back-button" routerLink="/">Quay lại màn hình chính</button>
 </div>
