--- a/src/app/pages/page-user/page-user.component.html
+++ b/src/app/pages/page-user/page-user.component.html
@@ -1,34 +1,114 @@
-<div class="container mt-5">
-    <div class="card">
-        <div class="card-header">
-            <h4>List of Users
-                <a routerLink="/users-page" class="btn btn-primary float-right">Add Users</a>
-            </h4>
+<div class="wrapper">
+    <!-- Sidebar -->
+    <nav id="sidebar">
+        <div class="sidebar-header">
+            <h3>Front</h3>
         </div>
-        <div class="card-body">
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>Phone</th>
-                       
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let item of data">
-                        <td>{{ item.id }}</td>
-                        <td>{{ item.name }}</td>
-                        <td>{{ item.email }}</td>
-                        <td>{{ item.phone }}</td>
-                        <td>
-                            <a routerLink="/" class="btn btn-success">Edit</a>
-                            <button type="button" class="btn btn-danger">Delete</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
+        <ul class="list-unstyled components">
+            <p>Pages</p>
+            <li class="active">
+                <a href="#">Dashboard</a>
+            </li>
+            <li>
+                <a href="#">Users</a>
+            </li>
+            <li>
+                <a href="#">User Profile</a>
+            </li>
+            <li>
+                <a href="#">Account</a>
+            </li>
+            <li>
+                <a href="#">E-commerce</a>
+            </li>
+            <li>
+                <a href="#">Projects</a>
+            </li>
+            <li>
+                <a href="#">Authentication</a>
+            </li>
+        </ul>
+    </nav>
+
+    <!-- Page Content -->
+    <div id="content">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <button type="button" id="sidebarCollapse" class="btn btn-info mar">
+                    <i class="fas fa-align-left"></i>
+                </button>
+                <input type="text" class="form-control" placeholder="Search in front" aria-label="Search">
+                <div class="navbar-nav ml-auto">
+                    <a class="nav-link" href="#"><i class="fas fa-bell"></i></a>
+                    <a class="nav-link" href="#"><i class="fas fa-cog"></i></a>
+                </div>
+            </div>
+        </nav>
+
+        <!-- Main Content -->
+        <div id="content">
+        
+            <div class="container mt-5">
+                <div class="card">
+                    <div class="card-header d-flex justify-content-between align-items-center">
+                        <h4>List of Users</h4>
+                        <button class="btn btn-primary" (click)="submitAnswers()">Add Users</button>
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>ID</th>
+                                        <th>Name</th>
+                                        <th>Email</th>
+                                        <th>Phone</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr *ngFor="let user of data">
+                                        <td>{{ user.id }}</td>
+                                        <td>{{ user.name }}</td>
+                                        <td>{{ user.email }}</td>
+                                        <td>{{ user.phone }}</td>
+                                        <td>
+                                            <button class="btn btn-success btn-sm mr-2" (click)="editUser(user)">Edit</button>
+                                            <button type="button" class="btn btn-danger btn-sm" (click)="deleteUser(user.id)">Delete</button>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Edit User Form -->
+                <div class="edit-form card" *ngIf="editMode">
+                    <div class="card-header">
+                        <h4>Edit User</h4>
+                    </div>
+                    <div class="card-body">
+                        <form (submit)="updateUser()">
+                            <div class="form-group">
+                                <label for="editName">Name</label>
+                                <input type="text" class="form-control" id="editName" [(ngModel)]="editedUser.name" name="editName">
+                            </div>
+                            <div class="form-group">
+                                <label for="editEmail">Email</label>
+                                <input type="email" class="form-control" id="editEmail" [(ngModel)]="editedUser.email" name="editEmail">
+                            </div>
+                            <div class="form-group">
+                                <label for="editPhone">Phone</label>
+                                <input type="text" class="form-control" id="editPhone" [(ngModel)]="editedUser.phone" name="editPhone">
+                            </div>
+                            <button type="submit" class="btn btn-primary">Save</button>
+                            <button type="button" class="btn btn-secondary" (click)="cancelEdit()">Cancel</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+
