--- a/src/app/pages/page-user/page-user.component.html
+++ b/src/app/pages/page-user/page-user.component.html
@@ -47,7 +47,6 @@
 
         <!-- Main Content -->
         <div id="content">
-        
             <div class="container mt-5">
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
@@ -73,7 +72,7 @@
                                         <td>{{ user.email }}</td>
                                         <td>{{ user.phone }}</td>
                                         <td>
-                                            <button class="btn btn-success btn-sm mr-2" (click)="editUser(user)">Edit</button>
+                                            <!-- <button class="btn btn-success btn-sm mr-2" (click)="editUser(user)">Edit</button> -->
                                             <button type="button" class="btn btn-danger btn-sm" (click)="deleteUser(user.id)">Delete</button>
                                         </td>
                                     </tr>
@@ -84,31 +83,32 @@
                 </div>
 
                 <!-- Edit User Form -->
-                <div class="edit-form card" *ngIf="editMode">
+                <!-- <div class="card mt-3" *ngIf="updateUsers">
                     <div class="card-header">
-                        <h4>Edit User</h4>
+                      <h4>Edit User</h4>
                     </div>
                     <div class="card-body">
-                        <form (submit)="updateUser()">
-                            <div class="form-group">
-                                <label for="editName">Name</label>
-                                <input type="text" class="form-control" id="editName" [(ngModel)]="editedUser.name" name="editName">
-                            </div>
-                            <div class="form-group">
-                                <label for="editEmail">Email</label>
-                                <input type="email" class="form-control" id="editEmail" [(ngModel)]="editedUser.email" name="editEmail">
-                            </div>
-                            <div class="form-group">
-                                <label for="editPhone">Phone</label>
-                                <input type="text" class="form-control" id="editPhone" [(ngModel)]="editedUser.phone" name="editPhone">
-                            </div>
-                            <button type="submit" class="btn btn-primary">Save</button>
-                            <button type="button" class="btn btn-secondary" (click)="cancelEdit()">Cancel</button>
-                        </form>
+                      <form (submit)="updateUser()">
+                        <div class="form-group">
+                          <label for="editName">Name</label>
+                          <input type="text" class="form-control" id="editName" [(ngModel)]="editedUser.name" name="editName">
+                        </div>
+                        <div class="form-group">
+                          <label for="editEmail">Email</label>
+                          <input type="email" class="form-control" id="editEmail" [(ngModel)]="editedUser.email" name="editEmail">
+                        </div>
+                        <div class="form-group">
+                          <label for="editPhone">Phone</label>
+                          <input type="text" class="form-control" id="editPhone" [(ngModel)]="editedUser.phone" name="editPhone">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Save</button>
+                        <button type="button" class="btn btn-secondary" (click)="cancelEdit()">Cancel</button>
+                      </form>
                     </div>
-                </div>
+                  </div> -->
             </div>
-        </div>
-    </div>
+        </div>  
+    </div>   
 </div>
+
 
