--- a/src/app/pages/users-page-craete/users-page.component.html
+++ b/src/app/pages/users-page-craete/users-page.component.html
@@ -3,7 +3,6 @@
         <div class="card">
             <div class="card-header"> 
                 <h4>Users Page
-                    <a routerLink="/" class="btn btn-danger float-right">Back</a>
                 </h4>
             </div>
             <div class="card-body">
@@ -29,11 +28,11 @@
                             <span *ngIf="errors.phone" class="text-danger">{{ errors.phone }}</span>
                         </div>
                         <div class="mb-3">
-                            <button type="submit" class="btn btn-primary">Save</button>
+                            <a routerLink="/" class="btn btn-danger float-left">Back</a>
+                            <button type="submit" class="btn btn-primary float-right">Save</button>
                         </div>
                     </form>
-                </ng-template>
-              
+                </ng-template>              
             </div>
         </div>
     </div>
